<resources>
    <string name="app_name">XReport</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_settings">Settings</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="about">About</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy">Privacy</string>
    <string name="on">On</string>
    <string name="title_activity_home">Home</string>
    <string name="expenses">Expenses</string>
    <string name="report">Report</string>
    <string name="approvals">Approvals</string>
    <string name="title_activity_expenses">Expenses</string>
    <string name="title_activity_register">Register</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="expense_items">Expense Items</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="emailid">Email ID</string>
    <string name="date">Date</string>
    <string name="vendor">Vendor</string>
    <string name="comments">Comments</string>
    <string name="edit_item">Edit Expense Item</string>
    <string name="item_name">Expense Item Name</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="report_expense">Report Expense</string>
    <string name="expense_report_submitted">Report Submitted</string>
    <string name="total_expense_amount">Total Expense Amount :</string>
    <string name="hello">Hello</string>
    <string name="title_activity_make_photo">Click Photo</string>
    <string name="title_activity_image_pick">title_activity_image_pick</string>
    <string-array name="sort_items_array">
        <item>Name</item>
        <item>Date</item>
        <item>Amount</item>
    </string-array>
    <string-array name="approvers_list">
        <item>Larry Ellison</item>
        <item>Indra Nooyi</item>
        <item>Elon Musk</item>
        <item>Larry Page</item>
        <item>Sheryl Sandberg</item>
        <item>Bill Gates</item>
    </string-array>
    <string-array name="categories_list">
        <item>Transportation</item>
        <item>Food</item>
        <item>Stay</item>
        <item>Registration</item>
        <item>Logistics</item>
        <item>AirFare</item>
        <item>Others</item>
    </string-array>
    <string-array name="currency_list">
        <item>$</item>
        <item>₤</item>
        <item>€</item>
        <item>¥</item>
        <item>₹</item>
        <item>₽</item>
        <item>₣</item>
    </string-array>
    <string name="title_activity_edit_expense">EditExpense</string>
    <string name="title_activity_edit_expense_item">EditExpenseItemActivity</string>
    <string name="title_activity_reports">ReportsActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>
