<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="edu.osu.settyblue.xreport.SettingsActivity"
                android:orientation="vertical"
                android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/push_notification"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/push_notifications"
            android:textSize="25dp"/>
        <ToggleButton
            android:layout_toRightOf="@id/push_notification"
            android:layout_alignParentRight="true"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/on"/>
        <TextView
            android:id="@+id/empty"
            android:layout_below="@id/push_notification"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="25dp"/>
        <Button
            android:id="@+id/about"
            android:layout_below="@id/empty"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/about"
            android:textSize="25dp"
            android:layout_centerHorizontal="true"/>
        <Button
            android:id="@+id/terms_of_use"
            android:layout_below="@id/about"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/terms_of_use"
            android:textSize="25dp"
            android:layout_centerHorizontal="true"/>
        <Button
            android:id="@+id/privacy"
            android:layout_below="@id/terms_of_use"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/privacy"
            android:textSize="25dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</LinearLayout>
