<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="edu.osu.settyblue.xreport.EditExpenseActivity"
              android:orientation="vertical"
              android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_expense"
            android:textSize="40dp"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="40dp"/>
        <ImageButton
            android:id="@+id/add_expense_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_plus"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <EditText
        android:id="@+id/eventname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/expensedate"
        android:layout_gravity="center_horizontal"
        android:hint="@string/date"/>

    <TextView
        android:layout_height="20dp"
        android:layout_width="10dp"
        android:textSize="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_items"
        android:textSize="40dp"
        android:gravity="center_vertical"/>
    <ListView
        android:id="@+id/expenseItemsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>
</LinearLayout>